Jenkins/svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: jenkins-service
    namespace: jenkins
    annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /
        prometheus.io/port: '8080'
spec:
    selector:
        app: jenkins-server
    type: ClusterIP
    ports:
        - port: 8080
          targetPort: 8080
          name: jenkins
        - name: jnlpport
          port: 50000
          targetPort: 50000
