Jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: jenkins-ingress
    namespace: jenkins
    annotations:
        spec.ingressClassName: traefik
spec:
    rules:
        -   host: jenkins.byrash.com
            http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: jenkins-service
                            port:
                                name: jenkins
